<resources>
    <string name="app_name">GitHubApp</string>
    <string name="title_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>

    <string name="text_language">Language</string>
    <string name="text_change_language">Change Language</string>
    <string name="text_common">Common</string>
    <string name="text_display">Display</string>
    <string name="text_logo">Logo</string>
    <string name="text_search">Search username…</string>
    <string name="text_showing_results">Showing %d results</string>
    <string name="text_what_are_you_looking_for">What are you looking for?</string>
    <string name="text_user_not_found">User not found!</string>
    <string name="text_back">Back</string>
    <string name="text_repository">Repository</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_open_on_github">Open On GitHub</string>
    <string name="text_github_connection">GitHub Connection</string>
    <string name="text_share_via">Share via</string>
    <string name="text_hello_there">Hello there! I\'m using GitHub. Follow me on https://github.com/%s</string>
    <string name="text_no_followers">%s\nhas no followers</string>
    <string name="text_no_following">%s\ndoesn\'t follow anyone</string>
    <string name="text_no_favorite"><string name="you_don_t_have_a_favorite_user">You don\'t have a favorite user</string></string>
    <string name="text_success_added">Successfully added to favorites!</string>
    <string name="text_deleted_success">Favorite deleted successfully!</string>

    <string name="github_url">https://github.com/%s</string>

    <string name="image_search_illustration">Image Search Illustration</string>
    <string name="image_no_data_illustration">Image No Data Illustration</string>

    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_title">Theme</string>

    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark Mode</string>
    <string name="dark_mode_off">Light Mode</string>

    <string-array name="dark_mode">
        <item>@string/dark_mode_auto</item>
        <item>@string/dark_mode_on</item>
        <item>@string/dark_mode_off</item>
    </string-array>

    <string-array name="dark_mode_value">
        <item>@string/pref_dark_auto</item>
        <item>@string/pref_dark_on</item>
        <item>@string/pref_dark_off</item>
    </string-array>
</resources>