<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/text_common">
        <Preference
            android:icon="@drawable/ic_language"
            app:summary="@string/text_change_language"
            app:title="@string/text_language">
            <intent android:action="android.settings.LOCALE_SETTINGS" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/text_display">
        <ListPreference
            android:icon="@drawable/ic_theme"
            app:defaultValue="@string/pref_dark_auto"
            app:entries="@array/dark_mode"
            app:entryValues="@array/dark_mode_value"
            app:key="@string/pref_key_dark"
            app:title="@string/pref_dark_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>